--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
       content="width=device-width, initial-scale=1"
       charset="UTF-8"
     />
+    <link rel="stylesheet" type="text/css" href="src/styles.css" />
     <script src="src/index.js"></script>
   </head>
 
   <body>
-    <div id="app"></div>
+    <!--<div id="app"></div>-->
   </body>
 </html>
